# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2026 Jonathan D.A. Jewell

[package]
name = "protocol-squisher-minikanren"
version = "1.0.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
description = "Constraint-based adapter synthesis (miniKanren-style search)"
repository = "https://github.com/hyperpolymath/protocol-squisher"
keywords = ["synthesis", "minikanren", "constraints", "interoperability"]
categories = ["development-tools"]

[dependencies]
protocol-squisher-ir = { path = "../protocol-squisher-ir" }
protocol-squisher-compat = { path = "../protocol-squisher-compat" }
serde = { version = "1.0", features = ["derive"] }
