# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2025 hyperpolymath

[package]
name = "protocol-squisher-optimizer"
version = "1.0.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
description = "Optimization layer for protocol-squisher - Concorde-class adapters"
repository = "https://github.com/hyperpolymath/protocol-squisher"
keywords = ["serialization", "interoperability", "optimization", "zero-copy"]
categories = ["development-tools", "encoding"]

[dependencies]
protocol-squisher-ir = { path = "../protocol-squisher-ir" }
protocol-squisher-compat = { path = "../protocol-squisher-compat" }
protocol-squisher-transport-primitives = { path = "../../ephapax-ir" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
serde_json = "1.0"
