# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2026 Jonathan D.A. Jewell

[package]
name = "protocol-squisher-performance"
version = "0.1.0"
edition = "2021"
license = "PMPL-1.0-or-later"
description = "Performance primitives: zero-copy, SIMD, lazy and streaming paths"
repository = "https://github.com/hyperpolymath/protocol-squisher"
keywords = ["performance", "zero-copy", "simd", "streaming"]
categories = ["development-tools", "encoding"]

[dependencies]
bytemuck = { version = "1.22", features = ["derive"] }
once_cell = "1.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
