# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2026 Jonathan D.A. Jewell

[package]
name = "protocol-squisher-performance"
version = "1.0.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
description = "Performance primitives: zero-copy, SIMD, lazy and streaming paths"
repository = "https://github.com/hyperpolymath/protocol-squisher"
keywords = ["performance", "zero-copy", "simd", "streaming"]
categories = ["development-tools", "encoding"]

[dependencies]
bytemuck = { version = "1.22", features = ["derive"] }
once_cell = "1.20"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
