# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "protocol-squisher-pyo3-codegen"
version = "1.0.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
description = "PyO3 binding code generation for protocol-squisher"
repository = "https://github.com/hyperpolymath/protocol-squisher"
keywords = ["pyo3", "codegen", "bindings", "python", "ffi"]
categories = ["development-tools", "encoding"]
rust-version = "1.75"

[dependencies]
protocol-squisher-ir = { path = "../protocol-squisher-ir" }
protocol-squisher-compat = { path = "../protocol-squisher-compat" }
protocol-squisher-transport-primitives = { path = "../../ephapax-ir" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
proptest = "1.4.0"
