# SPDX-License-Identifier: PMPL-1.0

[package]
name = "protocol-squisher-python-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["hyperpolymath"]
license = "PMPL-1.0"
description = "Pydantic/Python schema analyzer for protocol-squisher"
repository = "https://github.com/hyperpolymath/protocol-squisher"
keywords = ["python", "pydantic", "analyzer", "schema", "introspection"]
categories = ["development-tools", "parser-implementations"]
rust-version = "1.75"

[dependencies]
protocol-squisher-ir = { path = "../protocol-squisher-ir" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
proptest = "1.4.0"
