# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "protocol-squisher-rescript-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
description = "ReScript schema analyzer for protocol-squisher"
repository = "https://github.com/hyperpolymath/protocol-squisher"
keywords = ["rescript", "analyzer", "schema", "parser", "ffi"]
categories = ["development-tools", "parser-implementations"]
rust-version = "1.75"

[dependencies]
protocol-squisher-ir = { path = "../protocol-squisher-ir" }
protocol-squisher-transport-primitives = { path = "../../ephapax-ir" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
thiserror = "2.0"

[dev-dependencies]
proptest = "1.4.0"
