# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2026 Jonathan D.A. Jewell

[package]
name = "protocol-squisher-security-bridge"
version = "0.1.0"
edition = "2021"
license = "PMPL-1.0-or-later"
description = "TLS/Noise protocol family bridging with safety checks"
repository = "https://github.com/hyperpolymath/protocol-squisher"
keywords = ["security", "tls", "noise", "verification"]
categories = ["development-tools", "network-programming"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
